--- a/forex/public/index.html
+++ b/forex/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Multi Forex Candlestick Chart</title>
+  <title>FOREX</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-financial"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
@@ -13,25 +13,19 @@
 </head>
 
 <body>
-    <div id="rsi-list" class="rsi-list"></div>
-  <div class="pair-selector">
+  
+  
+  <div class="container">
+    <!-- Charts will be dynamically inserted here -->
+    <div id="charts-container"></div>
   </div>
 
-</div>
-  <div class="container">
-    <h1>CHF</h1>
-    <div class="chart-container">
-      <canvas id="chart"></canvas>
-    </div>
-  </div>
+  <div id="rsi-lists"></div>
 
   <footer>
-    <p>Forex Candlestick Analyzer &copy; 2025 | Daily Data</p>
+    <p>FOREX by Makar_Karma &copy; 2025</p>
   </footer>
 
-<script src="./index.js"></script>
-
-</script>
-
+  <script src="./index.js"></script>
 </body>
 </html>
