--- a/public/index.html
+++ b/public/index.html
@@ -12,76 +12,37 @@
 
 
   <link rel="stylesheet" href="./index.css">
+
+  <link rel="icon" href="./favicon.jpg" type="image/jpg">
+
 </head>
 
 <body>
-  
 
-  
+ <div class="header">
+            <nav class="nav">
+                <a href="./main.html" class="nav-link active">Main</a>
+                <a href="./index.html" class="nav-link">Forex</a>
+                <a href="./edgeCalculator.html" class="nav-link">EV</a>
+                <a href="./cbRates.html" class="nav-link">CB Rates</a>
+                <a href="./effectivityOfAds.html" class="nav-link">ROAS/CPA</a>
+                <a href="./realEstate.html" class="nav-link">Real estate</a>
+                <a href="./polymarket.html" class="nav-link">Polymarket</a>
+            </nav>
+        </div>
+
+
   <div class="container">
+    <div id="charts-container"></div>
+  </div>
+
+    <div class="container">
     <div id="charts-container"></div>
   </div>
 
   <div id="rsi-lists"></div>
 
-  <div class="currency-pairs">
-    <div class="pair">
-      <img src="../data/CB_rates/USD_CB.jpeg" alt="USD" />
-      <div class="pair-label">USD</div>
-    </div>
 
-    <div class="pair">
-      <img src="../data/CB_rates/CHF_CB.jpeg" alt="CHF" />
-      <div class="pair-label">CHF</div>
-    </div>
-    <div class="pair">
-      <img src="../data/CB_rates/EUR_CB.jpeg" alt="EUR" />
-      <div class="pair-label">EUR</div>
-    </div>
-    <div class="pair">
-      <img src="../data/CB_rates/GBP_CB.jpeg" alt="GBP" />
-      <div class="pair-label">GBP</div>
-    </div>
-
-    <div class="pair">
-      <img src="../data/CB_rates/JPY_CB.jpeg" alt="JPY" />
-      <div class="pair-label">JPY</div>
-    </div>
-
-    <div class="pair">
-      <img src="../data/CB_rates/CAD_CB.jpeg" alt="CAD" />
-      <div class="pair-label">CAD</div>
-    </div>
-    <div class="pair">
-      <img src="../data/CB_rates/AUD_CB.jpeg" alt="AUD" />
-      <div class="pair-label">AUD</div>
-    </div>
-    <div class="pair">
-      <img src="../data/CB_rates/NZD_CB.jpeg" alt="NZD" />
-      <div class="pair-label">NZD</div>
-    </div>
-  </div>
-
-  <h3 style="
-    text-align: center;
-    background: #1691D9;
-    margin-bottom: 30px;
-    padding: 20px 130px;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    line-height: 1.8;
-    font-size: 1.25rem;
-    color:  #FFB908;
-  ">
-    50 trades = noise<br>
-    100 trades = early signals<br>
-    300+ trades = emerging clarity<br>
-    1000+ trades = strong verdict
-  </h3>
-
-  <h3>
-    !!*ADD NEWS AND VOLUME
-  </h3>
 
   <footer>
     <p>FOREX by Makar_Karma &copy; 2025</p>
